Fix ui distortion in normal window size
When in normal window size, components get distorted, re-evaluated and re-assigned different properties to fit this window size

--- a/Sealena/accounts/static/accounts/css/profile.css
+++ b/Sealena/accounts/static/accounts/css/profile.css
@@ -235,10 +235,10 @@ h3{
 
 .user-details{
     position: absolute;
-    top: 105%;
+    top: 102%;
     left: 15%;
     width: 70%;
-    height: 72%;
+    height: 77%;
     border-radius: 25px;
     padding: 20px;
 }
