--- a/Sealena/appointments/static/appointments/css/appointments.css
+++ b/Sealena/appointments/static/appointments/css/appointments.css
@@ -29,7 +29,7 @@ button{
 
 .data-container{
     margin-top: 1%;
-    max-height: 727px;
+    max-height: 647px;
 }
 
 .data-table__item{
