--- a/Sealena/providers/static/providers/css/providers.css
+++ b/Sealena/providers/static/providers/css/providers.css
@@ -7,7 +7,7 @@
 }
 
 .data-container{
-    max-height: 693px;
+    max-height: 617px;
 }
 
 /*######################################################### Form #####################################################*/
