--- a/Sealena/static/base/css/base.css
+++ b/Sealena/static/base/css/base.css
@@ -274,7 +274,7 @@ select:focus{
 }
 
 .data-container{
-    max-height: 769px;
+    max-height: 693px;
     overflow-y: auto;
     animation: show-up 0.5s linear;
 }
@@ -842,8 +842,8 @@ a {
 .social-section__chat-content{
     margin-top: 20%;
     width: 94%;
-    height: 670px;
-    max-height: 670px;
+    height: 600px;
+    max-height: 600px;
     overflow-y: auto;
     padding: 10px;
 }
@@ -882,6 +882,8 @@ a {
 }
 
 #id_text{
+    position: absolute;
+    bottom: 2%;
     margin-left: 10px;
 }
 
@@ -889,7 +891,7 @@ a {
     cursor: pointer;
     position: absolute;
     right: 8%;
-    bottom: 5%;
+    bottom: 3.5%;
     font-size: 22px;
     transition: 0.5s;
 }
